--- a/Class Chat/Base.lproj/Main.storyboard
+++ b/Class Chat/Base.lproj/Main.storyboard
@@ -468,7 +468,7 @@
                         <barButtonItem key="rightBarButtonItem" title="Chat" id="qpU-Hy-XYf">
                             <color key="tintColor" systemColor="systemGreenColor"/>
                             <connections>
-                                <segue destination="hU9-qU-IsI" kind="presentation" id="nWt-Hf-iqO"/>
+                                <segue destination="hU9-qU-IsI" kind="presentation" modalPresentationStyle="fullScreen" id="nWt-Hf-iqO"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -519,9 +519,9 @@
         <!--Messages-->
         <scene sceneID="AHt-Gv-qVg">
             <objects>
-                <viewController storyboardIdentifier="ViewController" modalPresentationStyle="fullScreen" id="fhM-OI-Kiu" customClass="ViewController" customModule="Class_Chat" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" modalPresentationStyle="fullScreen" id="fhM-OI-Kiu" customClass="MessagesViewController" customModule="Class_Chat" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mGR-V8-OC7">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Mox-2c-6NI">
@@ -533,7 +533,11 @@
                         <viewLayoutGuide key="safeArea" id="W0g-qK-CVb"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Messages" id="jO3-8v-wY8"/>
+                    <navigationItem key="navigationItem" title="Messages" id="jO3-8v-wY8">
+                        <barButtonItem key="rightBarButtonItem" image="person.badge.plus" catalog="system" id="aGM-Cr-1PG">
+                            <color key="tintColor" systemColor="systemGreenColor"/>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="myTable" destination="Mox-2c-6NI" id="Prj-IL-bHs"/>
                     </connections>
@@ -548,7 +552,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hU9-qU-IsI" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ugJ-MM-MRW">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -565,6 +569,7 @@
         <image name="announcements icon" width="30" height="26"/>
         <image name="assignment icon" width="30" height="30"/>
         <image name="grades icon" width="24" height="30"/>
+        <image name="person.badge.plus" catalog="system" width="128" height="124"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
