--- a/Class Chat/Base.lproj/Main.storyboard
+++ b/Class Chat/Base.lproj/Main.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="X3q-No-tPh">
-                                <rect key="frame" x="50" y="353.5" width="314" height="88"/>
+                                <rect key="frame" x="50" y="383.5" width="314" height="88"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="EUR-tI-cf4" userLabel="Username Stack View">
                                         <rect key="frame" x="0.0" y="0.0" width="314" height="34"/>
@@ -54,13 +54,13 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Class Chat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1K4-NP-29p">
-                                <rect key="frame" x="74" y="194" width="266" height="59.5"/>
+                                <rect key="frame" x="74" y="224" width="266" height="59.5"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="51"/>
                                 <color key="textColor" systemColor="systemGreenColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="150" translatesAutoresizingMaskIntoConstraints="NO" id="keN-7c-49C">
-                                <rect key="frame" x="56.5" y="566.5" width="301" height="38"/>
+                                <rect key="frame" x="56.5" y="596.5" width="301" height="38"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sG8-hI-mEy" userLabel="Login Button">
                                         <rect key="frame" x="0.0" y="0.0" width="60" height="38"/>
@@ -85,16 +85,26 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="person.2.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="GZK-90-K0Q">
+                                <rect key="frame" x="139" y="84.5" width="137" height="130"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="137" id="lCB-u4-95Y"/>
+                                    <constraint firstAttribute="height" constant="133" id="pj6-J9-tr5"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="1K4-NP-29p" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Bmw-Pw-rlG"/>
-                            <constraint firstItem="1K4-NP-29p" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="GfC-ha-mQM"/>
+                            <constraint firstItem="1K4-NP-29p" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="180" id="GfC-ha-mQM"/>
                             <constraint firstItem="X3q-No-tPh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OX2-B7-NiC"/>
                             <constraint firstItem="X3q-No-tPh" firstAttribute="top" secondItem="1K4-NP-29p" secondAttribute="bottom" constant="100" id="YNs-vd-Cv2"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GZK-90-K0Q" secondAttribute="trailing" constant="138" id="ZZb-5J-5M7"/>
                             <constraint firstItem="keN-7c-49C" firstAttribute="top" secondItem="X3q-No-tPh" secondAttribute="bottom" constant="125" id="ZzJ-B2-mAZ"/>
                             <constraint firstItem="X3q-No-tPh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="ebp-iu-oIm"/>
+                            <constraint firstItem="GZK-90-K0Q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="39" id="eqN-DL-9lx"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="X3q-No-tPh" secondAttribute="trailing" constant="50" id="ogN-v2-SYg"/>
                             <constraint firstItem="keN-7c-49C" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rrb-oo-dXL"/>
                         </constraints>
@@ -569,6 +579,7 @@
         <image name="announcements icon" width="30" height="26"/>
         <image name="assignment icon" width="30" height="30"/>
         <image name="grades icon" width="24" height="30"/>
+        <image name="person.2.fill" catalog="system" width="128" height="80"/>
         <image name="person.badge.plus" catalog="system" width="128" height="124"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
